--- a/ResearchMgt/frontend/package.json
+++ b/ResearchMgt/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.13.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "sweetalert2": "^11.14.5"
